--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       var dlight = true;
       var slight = true;
       var lighting = true;
-      var fog = false;
+      var fog = true;
       $(document).ready(() => {
         // Setup initial AJAX settings.
         $.ajaxSetup({
